# py-ipfs-cid

./: .gitignore  Cargo.toml  README.md  py_ipfs_cid.pyi  pyproject.toml
src/: lib.rs
tests/: test_compute_cid.py
