[package]
name = "py-ipfs-cid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "py_ipfs_cid"
crate-type = ["cdylib"]

[dependencies]
ipfs-unixfs = "0.2.0"
pyo3 = { version = "0.17.1", features = ["extension-module"] }
